--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,29 @@ go.work.sum
 # env file
 .env
 
+# Build artifacts
+/bin/
+/dist/
+
+# Coverage reports
+coverage.out
+coverage.html
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Temporary files
+*.tmp
+*.bak
+
+# SSH keys (for testing)
+*.pem
+*.key
+id_rsa
+id_ed25519
+
