Update container registry to ghcr.io
Changed from git.srvlab.io to ghcr.io/3whiskeywhiskey as the container
registry since Gitea container registry is not configured.

Image is now available at:
ghcr.io/3whiskeywhiskey/rds-csi-driver:latest

Updated manifests:
- deploy/kubernetes/controller.yaml
- deploy/kubernetes/node.yaml
- deploy/kubernetes/kustomization.yaml

--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -63,7 +63,7 @@ spec:
       containers:
         # RDS CSI Driver Controller
         - name: rds-csi-driver
-          image: git.srvlab.io/whiskey/rds-csi-driver:latest
+          image: ghcr.io/3whiskeywhiskey/rds-csi-driver:latest
           imagePullPolicy: Always
           args:
             - "--endpoint=$(CSI_ENDPOINT)"
