--- a/deploy/kubernetes/node.yaml
+++ b/deploy/kubernetes/node.yaml
@@ -36,7 +36,7 @@ spec:
       containers:
         # RDS CSI Driver Node
         - name: rds-csi-driver
-          image: git.srvlab.io/whiskey/rds-csi-driver:latest
+          image: ghcr.io/3whiskeywhiskey/rds-csi-driver:latest
           imagePullPolicy: Always
           args:
             - "--endpoint=$(CSI_ENDPOINT)"
