--- a/deploy/kubernetes/node.yaml
+++ b/deploy/kubernetes/node.yaml
@@ -39,11 +39,10 @@ spec:
           image: ghcr.io/3whiskeywhiskey/rds-csi-driver:latest
           imagePullPolicy: Always
           args:
-            - "--endpoint=$(CSI_ENDPOINT)"
-            - "--node-id=$(NODE_ID)"
-            - "--enable-controller=false"
-            - "--enable-node=true"
-            - "--v=5"
+            - "-endpoint=$(CSI_ENDPOINT)"
+            - "-node-id=$(NODE_ID)"
+            - "-node"
+            - "-v=5"
           env:
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
