--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: 3whiskeywhiskey/rds-csi-driver
+  IMAGE_NAME: 3whiskeywhiskey/rds-csi
 
 jobs:
   verify:
