feat: Add automatic deletion of orphaned files
Add DeleteFile method to RDS client and update orphan reconciler
to automatically delete orphaned .img files without disk objects.

Changes:
- Add DeleteFile method to RDSClient interface
- Implement DeleteFile in SSH client using /file remove command
- Update reconcileOrphanedFiles to delete files when not in dry-run mode
- Orphaned files are now automatically cleaned up, not just logged

--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -86,7 +86,7 @@ spec:
             - "-enable-orphan-reconciler"
             - "-orphan-check-interval=1h"
             - "-orphan-grace-period=5m"
-            - "-orphan-dry-run=true"  # Starting with dry-run, set to false to actually delete orphans
+            - "-orphan-dry-run=false"  # Active cleanup mode - will delete orphaned volumes
             - "-v=5"
             # SECURITY: For testing only, you can skip host key verification with:
             # - "-rds-insecure-skip-verify=true"
