--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rds-csi-secret
-  namespace: kube-system
+  namespace: rds-csi
 type: Opaque
 stringData:
   # RDS SSH private key (ed25519 format)
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rds-csi-config
-  namespace: kube-system
+  namespace: rds-csi
 data:
   # RDS connection settings (SSH management interface)
   rds-address: "10.42.241.3"  # RDS management IP for SSH
@@ -42,7 +42,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rds-csi-controller
-  namespace: kube-system
+  namespace: rds-csi
   labels:
     app: rds-csi-controller
 spec:
@@ -86,7 +86,7 @@ spec:
             - "-enable-orphan-reconciler"
             - "-orphan-check-interval=1h"
             - "-orphan-grace-period=5m"
-            - "-orphan-dry-run=false"  # Active cleanup mode - will delete orphaned volumes
+            - "-orphan-dry-run=true"  # Dry-run mode - will only log orphaned volumes without deleting
             - "-v=5"
             # SECURITY: For testing only, you can skip host key verification with:
             # - "-rds-insecure-skip-verify=true"
@@ -140,7 +140,7 @@ spec:
             - "--v=5"
             - "--timeout=300s"
             - "--leader-election=true"
-            - "--leader-election-namespace=kube-system"
+            - "--leader-election-namespace=rds-csi"
             - "--default-fstype=ext4"
             - "--feature-gates=Topology=false"
           env:
@@ -165,7 +165,7 @@ spec:
             - "--v=5"
             - "--timeout=300s"
             - "--leader-election=true"
-            - "--leader-election-namespace=kube-system"
+            - "--leader-election-namespace=rds-csi"
             - "--handle-volume-inuse-error=false"
           env:
             - name: ADDRESS
