feat: Add node affinity to prefer control-plane nodes for controller
Prefer scheduling controller on control-plane nodes to avoid kubelet
connectivity issues on worker nodes (specifically r640).

--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -58,6 +58,18 @@ spec:
       serviceAccountName: rds-csi-controller
       priorityClassName: system-cluster-critical
 
+      # Prefer control-plane nodes to avoid r640 kubelet connectivity issues
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              preference:
+                matchExpressions:
+                  - key: node-role.kubernetes.io/control-plane
+                    operator: In
+                    values:
+                      - "true"
+
       # Tolerate control-plane taints
       tolerations:
         - key: node-role.kubernetes.io/control-plane
