fix(ci): correct IMAGE_NAME to rds-csi in release and main workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: 3whiskeywhiskey/rds-csi-driver
+  IMAGE_NAME: 3whiskeywhiskey/rds-csi
 
 jobs:
   verify:
