--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -169,6 +169,29 @@ spec:
               cpu: 100m
               memory: 128Mi
 
+        # CSI external-attacher sidecar (for ControllerPublish/Unpublish)
+        - name: csi-attacher
+          image: registry.k8s.io/sig-storage/csi-attacher:v4.5.0
+          args:
+            - "--csi-address=$(ADDRESS)"
+            - "--v=5"
+            - "--timeout=300s"
+            - "--leader-election=true"
+            - "--leader-election-namespace=rds-csi"
+          env:
+            - name: ADDRESS
+              value: /var/lib/csi/sockets/pluginproxy/csi.sock
+          volumeMounts:
+            - name: socket-dir
+              mountPath: /var/lib/csi/sockets/pluginproxy/
+          resources:
+            requests:
+              cpu: 10m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 128Mi
+
         # CSI external-resizer sidecar (for volume expansion)
         - name: csi-resizer
           image: registry.k8s.io/sig-storage/csi-resizer:v1.10.0
