fix: enable ControllerPublishVolume for RWX block volumes
Required changes for v0.5.0 KubeVirt live migration support:

1. CSIDriver: Set attachRequired=true
   - Enables VolumeAttachment object creation
   - Required for ControllerPublishVolume/Unpublish
   - Needed for block device attachment workflow

2. RBAC: Add 'update' verb for PersistentVolumes
   - Controller needs to update PV annotations
   - Stores attachment state for dual-attach tracking
   - Fixes: 'cannot update resource persistentvolumes' error

Without these changes:
- No VolumeAttachment created (attachRequired=false)
- Block volumes fail to attach to nodes
- VMs stuck in Scheduling phase

With these changes:
- VolumeAttachment created and attached successfully
- ControllerPublishVolume called correctly
- RWX block volumes work with v0.5.1

Tested on metal cluster with KubeVirt VMs.

--- a/deploy/kubernetes/csidriver.yaml
+++ b/deploy/kubernetes/csidriver.yaml
@@ -5,9 +5,12 @@ kind: CSIDriver
 metadata:
   name: rds.csi.srvlab.io
 spec:
-  # attachRequired: false means we don't need ControllerPublishVolume
-  # We handle attachment via NodeStageVolume (NVMe/TCP connection)
-  attachRequired: false
+  # attachRequired: true enables ControllerPublishVolume/ControllerUnpublishVolume
+  # Required for:
+  # - RWX block volumes (KubeVirt live migration)
+  # - Volume fencing (prevents dual-attach violations)
+  # - VolumeAttachment object creation by Kubernetes
+  attachRequired: true
 
   # podInfoOnMount: true makes pod info available to NodePublishVolume
   # Useful for future features like per-pod access control
