--- a/deploy/kubernetes/rbac.yaml
+++ b/deploy/kubernetes/rbac.yaml
@@ -23,7 +23,7 @@ rules:
   # Access to PersistentVolumes
   - apiGroups: [""]
     resources: ["persistentvolumes"]
-    verbs: ["get", "list", "watch", "create", "delete", "patch"]
+    verbs: ["get", "list", "watch", "create", "delete", "patch", "update"]
 
   # Access to PersistentVolumeClaims
   - apiGroups: [""]
