feat(14-04): update Kubernetes deployment with Phase 14 features
- Add terminationGracePeriodSeconds: 60 to node DaemonSet
- Add CSI_MANAGED_NQN_PREFIX env var to node plugin from ConfigMap
- Add nqn-prefix to ConfigMap (default: nqn.2000-02.com.mikrotik:pvc-)

Ensures Kubernetes allows 60 seconds for graceful shutdown before SIGKILL.
Node plugin receives NQN prefix configuration for orphan cleaner filtering.
ConfigMap provides centralized configuration for NQN prefix.

--- a/deploy/kubernetes/controller.yaml
+++ b/deploy/kubernetes/controller.yaml
@@ -35,6 +35,8 @@ data:
   rds-port: "22"               # SSH port
   rds-user: "metal-csi"        # SSH user on RouterOS
   rds-volume-base-path: "/storage-pool/metal-csi"  # Base path for volumes
+  # NQN prefix for CSI-managed volumes (safety filter)
+  nqn-prefix: "nqn.2000-02.com.mikrotik:pvc-"
 
 ---
 # Controller Deployment
