--- a/deploy/kubernetes/node.yaml
+++ b/deploy/kubernetes/node.yaml
@@ -25,6 +25,9 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       priorityClassName: system-node-critical
 
+      # Allow extra time for volume cleanup before SIGKILL
+      terminationGracePeriodSeconds: 60
+
       # SECURITY: Add seccomp profile for syscall filtering
       securityContext:
         seccompProfile:
@@ -55,6 +58,12 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            # NQN prefix for volume filtering - REQUIRED for safety
+            - name: CSI_MANAGED_NQN_PREFIX
+              valueFrom:
+                configMapKeyRef:
+                  name: rds-csi-config
+                  key: nqn-prefix
           securityContext:
             # SECURITY NOTE: CSI node plugins require privileged mode
             # Reason: Bidirectional mount propagation is a hard Kubernetes requirement
