ci: add Docker CLI installation to workflows for golang runner
The golang:1.22-bookworm runner image doesn't include Docker CLI.
Add installation step before Docker operations in both workflows.

- quick-build.yml: Before QEMU/Buildx setup
- full-test.yml: Before docker build command

--- a/.gitea/workflows/full-test.yml
+++ b/.gitea/workflows/full-test.yml
@@ -115,6 +115,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install Docker CLI
+        run: |
+          apt-get update && apt-get install -y docker.io
+          docker --version
+
       - name: Build container (no push)
         run: |
           docker build \
