--- a/.gitea/workflows/quick-build.yml
+++ b/.gitea/workflows/quick-build.yml
@@ -1,7 +1,8 @@
 name: Quick Build
 
-# Fast build on push to main branches - NO TESTS
-# Goal: <5 minutes for rapid feedback
+# Fast build on push to main branches - NO TESTS, NO GITHUB ACTIONS
+# Goal: <2 minutes for rapid feedback
+# Uses direct commands instead of GitHub actions to avoid slow cloning
 
 on:
   push:
@@ -13,22 +14,19 @@ on:
       - '.github/**'
 
 env:
-  # Update these for your Gitea registry
-  REGISTRY: git.whiskey.works  # or use Gitea's built-in registry
+  REGISTRY: git.whiskey.works
   IMAGE_NAME: whiskey/rds-csi
 
 jobs:
   quick-build:
-    name: Build Binary and Container
-    runs-on: ubuntu-latest
+    name: Build Binary Only (Fast)
+    runs-on: ubuntu-latest  # golang:1.22-bookworm
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24'
+      # Checkout is already done by the runner - code is in workspace
+      - name: Verify Go installation
+        run: |
+          go version
+          echo "✅ Go is pre-installed in golang:1.22-bookworm"
 
       - name: Download dependencies
         run: go mod download
@@ -36,56 +34,17 @@ jobs:
       - name: Build binary
         run: make build-local
 
-      - name: Quick smoke test
+      - name: Verify binary
         run: |
-          # Just verify the binary was built and runs
+          ls -lh bin/
           ./bin/rds-csi-plugin-* --version || true
           echo "✅ Binary built successfully"
 
-      - name: Install Docker CLI
-        run: |
-          apt-get update && apt-get install -y docker.io
-          docker --version
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # Uncomment when ready to push to registry
-      # - name: Log in to registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ secrets.REGISTRY_USER }}
-      #     password: ${{ secrets.REGISTRY_TOKEN }}
-
-      - name: Build and push multi-arch container
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: false  # Set to true when registry is configured
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-${{ github.sha }}
-          build-args: |
-            GIT_COMMIT=${{ github.sha }}
-            GIT_TAG=${{ github.ref_name }}-${{ github.sha }}
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Build summary
         run: |
-          echo "✅ Quick multi-arch build complete!"
+          echo "✅ Quick build complete!"
           echo "Branch: ${{ github.ref_name }}"
           echo "Commit: ${{ github.sha }}"
-          echo "Platforms: linux/amd64, linux/arm64"
           echo ""
-          echo "Container tags:"
-          echo "  - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}"
-          echo "  - ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-${{ github.sha }}"
-          echo ""
-          echo "To enable push: Set 'push: true' in workflow and uncomment login step"
+          echo "Built binary:"
+          ls -lh bin/ | grep rds-csi-plugin
