ci: update workflow comment to reflect Go 1.24 requirement
go.mod requires Go 1.24, so runner must use golang:1.24-bookworm
or equivalent image with Go 1.24+.

--- a/.gitea/workflows/quick-build.yml
+++ b/.gitea/workflows/quick-build.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   quick-build:
     name: Build Binary Only (Fast)
-    runs-on: ubuntu-latest  # golang:1.22-bookworm
+    runs-on: golang  # golang:1.24-bookworm or custom image with Go 1.24
     steps:
       - name: Install Node.js for actions
         run: |
