--- a/.gitea/workflows/full-test.yml
+++ b/.gitea/workflows/full-test.yml
@@ -51,12 +51,12 @@ jobs:
           COVERAGE=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
           echo "Coverage: ${COVERAGE}%"
 
-          if (( $(echo "$COVERAGE < 60" | bc -l) )); then
-            echo "❌ Coverage ${COVERAGE}% is below 60% threshold"
+          if (( $(echo "$COVERAGE < 65" | bc -l) )); then
+            echo "::error::Coverage ${COVERAGE}% is below 65% threshold"
             exit 1
           fi
 
-          echo "✅ Coverage ${COVERAGE}% meets 60% threshold"
+          echo "::notice::Coverage ${COVERAGE}% meets 65% threshold"
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v3
