fix(lint): update golangci-lint config for v2
- Add version: 2 field (required by golangci-lint v2.x)
- Remove gofmt and goimports from linters list (formatters in v2)

Note: Cyclop warnings are pre-existing technical debt, not new
issues. The configured max-complexity: 50 setting needs further
investigation in v2 config format.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 # golangci-lint configuration for RDS CSI Driver
 # Run with: make lint (or golangci-lint run)
 
+version: 2
+
 run:
   timeout: 5m
   tests: true
@@ -17,9 +19,7 @@ linters:
     - gocyclo       # Cyclomatic complexity per function
     - cyclop        # Function and package complexity
 
-    # Code quality (already used)
-    - gofmt
-    - goimports
+    # Code quality linters
     - govet
     - ineffassign
     - staticcheck
