fix(25.2-01): migrate golangci-lint config to v2 format
- Change version: 2 to version: "2" (string)
- Move linters-settings to linters.settings
- Move issues.exclude-rules to linters.exclusions.rules
- Add linters.default: none
- Add linters.exclusions.generated: lax
- Add ST1001 exclusion for test/e2e/ (Ginkgo/Gomega dot imports)
- Remove run.timeout (v2 disables timeout by default)
- Remove cyclop.skip-tests (not valid in v2)
- Remove goimports settings (linter not enabled)

Verified: golangci-lint config verify passes
Confirmed: errcheck exclusion for _test.go files working (0 errcheck issues)
Result: Lint issues reduced from 134 to 7 staticcheck violations

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,15 +1,15 @@
 # golangci-lint configuration for RDS CSI Driver
 # Run with: make lint (or golangci-lint run)
 
-version: 2
+version: "2"
 
 run:
-  timeout: 5m
   tests: true
   build-tags:
     - integration
 
 linters:
+  default: none
   enable:
     # Error handling linters
     - errcheck      # Check for unchecked errors
@@ -29,60 +29,64 @@ linters:
     # Disabled intentionally
     - wrapcheck     # Too strict for this codebase - many internal errors don't need wrapping
 
-linters-settings:
-  errcheck:
-    # Check for unchecked errors in type assertions
-    check-type-assertions: true
-    # Check for unchecked errors in blank assignments
-    check-blank: false
-    # Don't require checking Close() errors (common pattern)
-    exclude-functions:
-      - (io.Closer).Close
-      - (*os.File).Close
+  settings:
+    errcheck:
+      # Check for unchecked errors in type assertions
+      check-type-assertions: true
+      # Check for unchecked errors in blank assignments
+      check-blank: false
+      # Don't require checking Close() errors (common pattern)
+      exclude-functions:
+        - (io.Closer).Close
+        - (*os.File).Close
 
-  errorlint:
-    # Require %w for error wrapping in fmt.Errorf
-    errorf: true
-    # Suggest errors.Is instead of == comparison
-    comparison: true
-    # Suggest errors.As instead of type assertion
-    asserts: true
+    errorlint:
+      # Require %w for error wrapping in fmt.Errorf
+      errorf: true
+      # Suggest errors.Is instead of == comparison
+      comparison: true
+      # Suggest errors.As instead of type assertion
+      asserts: true
 
-  gocyclo:
-    # Threshold based on current baseline (max: 44 in RecordEvent)
-    # Set to 50 to allow existing code, catch new violations
-    # Target: Ratchet down to 30 by v0.8, 20 by v1.0
-    min-complexity: 50
+    gocyclo:
+      # Threshold based on current baseline (max: 44 in RecordEvent)
+      # Set to 50 to allow existing code, catch new violations
+      # Target: Ratchet down to 30 by v0.8, 20 by v1.0
+      min-complexity: 50
 
-  cyclop:
-    # Match gocyclo threshold for consistency
-    max-complexity: 50
-    # Don't skip tests - they should also have reasonable complexity
-    skip-tests: false
+    cyclop:
+      # Match gocyclo threshold for consistency
+      max-complexity: 50
 
-  goimports:
-    # Group local imports separately
-    local-prefixes: git.srvlab.io/whiskey/rds-csi-driver
+  exclusions:
+    # Skip generated code
+    generated: lax
+
+    rules:
+      # Allow %v in test files (test error messages don't need chains)
+      - path: _test\.go
+        linters:
+          - errorlint
+        text: "non-wrapping format verb"
+
+      # Ignore errcheck in test files
+      - path: _test\.go
+        linters:
+          - errcheck
+
+      # Allow type assertions in test mocks
+      - path: test/mock/
+        linters:
+          - errorlint
+        text: "type assertion"
+
+      # Allow dot imports in e2e tests (Ginkgo/Gomega convention)
+      - path: test/e2e/
+        linters:
+          - staticcheck
+        text: "ST1001"
 
 issues:
   # Don't limit issues per linter
   max-issues-per-linter: 0
   max-same-issues: 0
-
-  exclude-rules:
-    # Allow %v in test files (test error messages don't need chains)
-    - path: _test\.go
-      linters:
-        - errorlint
-      text: "non-wrapping format verb"
-
-    # Ignore errcheck in test files
-    - path: _test\.go
-      linters:
-        - errcheck
-
-    # Allow type assertions in test mocks
-    - path: test/mock/
-      linters:
-        - errorlint
-      text: "type assertion"
